Remove additional footer in cta

--- a/index.html
+++ b/index.html
@@ -633,19 +633,20 @@
                     </div>
 
 
-                <div class="footer" id="footer">
+                <!-- <div class="footer" id="footer">
                     <a href="https://twitter.com/blackettlabfam" target="_blank"><i
                             class="footer-icon fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i
                             class="footer-icon fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
 
                     <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
                     <p class="text"> All Rights Reserved. </p>
-                </div>
+                </div> -->
 
             </div>
 
-            <div class="cta-div web-only  text-center">
+            <div class="cta-div web-only text-center">
                 <h1 class="heading">Get in touch </h1>
 
                 <div class="row">
