--- a/join/index.html
+++ b/join/index.html
@@ -192,7 +192,7 @@
             </div>
           </div>
 
-          <div class="form-group form-row">
+          <div class="form-group form-row ">
             <div class="form-label col-sm-7">
               <input
                 type="text"
@@ -207,21 +207,22 @@
                 >Optional: If this differs from your full name, enter your
                 Facebook account name here.</small
               >
-            </div>
+              
+              </div>
 
-          <div class="form-label col-sm-5">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value="yes"
-              id="hasFacebookAccount"
-              name="hasFacebookAccount"
-              autocomplete="off"
-            />
-            <label for="hasFacebookAccount">
-              Tick this box if you don't have or use a Facebook account.
-            </label>
-          </div>
+              <div class="form-check col-sm-5">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value="yes"
+                id="hasFacebookAccount"
+                name="hasFacebookAccount"
+                autocomplete="off"
+              />
+              <label class="form-check-label" for="hasFacebookAccount">
+                Tick this box if you don't have or use a Facebook account.
+              </label>
+              </div>
           </div>
 
 
