--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -231,11 +231,11 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-2" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">Who will be hosting the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">Who will be supervising the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-2">
         <p class="subtext grey-text">
-          Our <u><a class="hyperlink" target="_blank" href="../index.html#meet-the-team">company directors</a></u> Jonathan Lansley-Gordon (Education Consultant and former Assistant Headteacher), Benyam Dejen (Researcher at the National Physical Laboratory) and Sophie Martin (Doctoral Researcher) will be hosting the three-day programme and will be in charge of overseeing activities. 
+          Our <u><a class="hyperlink" href="../index.html#meet-the-team">company directors</a></u> Jonathan Lansley-Gordon (Education Consultant and former Assistant Headteacher), Benyam Dejen (Researcher at the National Physical Laboratory) and Sophie Martin (Doctoral Researcher) will be supervising students on the three-day programme and will be in charge of overseeing activities. 
         </p>
       </div>
 
@@ -350,25 +350,25 @@
       </div>
     </div>
     
-    <div class="white-div d-flex flex-column text-center">
+    <div id="sponsors" class="white-div d-flex flex-column text-center">
       <h1 class="heading">Project Partners</h1>
-      <div class="container" >
+      <div style="padding:0;" class="container" >
         <div style="padding-bottom: 10%;" class="row align-items-center">
-          <div class="col-4">
+          <div class="col">
             <img style="width:60%;" src="../images/IOP-StackedLogo-Colour-RGB.png" alt="">
           </div>
-          <div class="col-4">
+          <div class="col">
             <img src="../images/NPL_Blue_294.jpg" alt="">
           </div>
-          <div class="col-4">
-            <img style="margin-right: -30%;" src="../images/Logo_for_Imperial_College_London.svg.png" alt="">
+          <div class="col">
+            <img style="margin-right: -20%; margin-top: -5%;" src="../images/Logo_for_Imperial_College_London.svg.png" alt="">
           </div>
         </div>
       </div>
 
       <h1 class="heading">Supported by</h1>
-        <div class="container ">
-          <img style="width:20%" src="../images/TOT_Logo_PMS392_32mm.jpg" alt="">
+        <div class="container">
+          <img style="width:30%" src="../images/TOT_Logo_PMS392_32mm.jpg" alt="">
         </div>
     
     </div>
