Update contact email

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -343,7 +343,7 @@
       </a>
       <div class="collapse" id="faq-14">
         <p class="subtext grey-text">
-        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:community@theblackettlabfamily.com?subject=Representing%20Physics%202023"
+        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:connect@theblackettlabfamily.com?subject=Representing%20Physics%202023"
         >community@theblackettlabfamily.com.</a></u>
       
         </p>
