--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -344,7 +344,7 @@
       <div class="collapse" id="faq-14">
         <p class="subtext grey-text">
         We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:connect@theblackettlabfamily.com?subject=Representing%20Physics%202023"
-        >community@theblackettlabfamily.com.</a></u>
+        >connect@theblackettlabfamily.com.</a></u>
       
         </p>
       </div>
