Enable rp2023 dropdown link

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -60,7 +60,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Rising Stars</a>
-                        <!-- <a class="dropdown-item" href="../rp2023/index.html">Representing Physics 2023</a> -->
+                        <a class="dropdown-item" href="../rp2023/index.html">Representing Physics 2023</a>
                       </div>
                     </li>
                     <li class="nav-item">
