--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="rising-stars/index.html">Rising Stars</a>
-                    <!-- <a class="dropdown-item" href="rp2023/index.html">Representing Physics 2023</a> -->
+                    <a class="dropdown-item" href="rp2023/index.html">Representing Physics 2023</a>
                     </div>
                 </li>
                 <li class="nav-item">
