--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="../rising-stars/index.html">Rising Stars</a>
-              <!-- <a class="dropdown-item" href="#">Representing Physics 2023<span class="sr-only">(current)</span></a> -->
+              <a class="dropdown-item" href="#">Representing Physics 2023<span class="sr-only">(current)</span></a>
             </div>
           </li>
           <li class="nav-item">
