Add privacy policy and tweaks to text

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="../images/logo_black.png">
 
     <link rel="stylesheet" href="../third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles_09.css">
+    <link rel="stylesheet" href="../css/styles_10.css">
 
     <!-- Google Fonts -->
     <link href="../third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -127,20 +127,15 @@
 
               </div>
 
-      <div class="center-div">
-        <footer class="footer" id="footer">
-            <a href="https://twitter.com/blackettlabfam" target="_blank"
-              ><i class="footer-icon fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/blackettlabfam/" target="_blank"
-              ><i class="footer-icon fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"
-            ><i class="footer-icon fab fa-linkedin"></i></a>
-
-            <p >© Copyright 2020 The Blackett Lab Family CIC</p>
-            <p >All Rights Reserved.</p>
-        </footer>
+    <section id="footer">
+      <div class="footer" id="footer">
+        <a href="https://twitter.com/blackettlabfam" target="_blank"><i class="footer-icon fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
+        <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
+        <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="../files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
       </div>
-
+  </section>
 
   </body>
 </html>
