--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles_09.css">
+    <link rel="stylesheet" href="css/styles_10.css">
 
     <!-- Google Fonts -->
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -696,8 +696,8 @@
           <a href="https://twitter.com/blackettlabfam" target="_blank"><i class="footer-icon fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
-          <p class="text">© Copyright 2020 The Blackett Lab Family CIC </p>
-          <p class="text"> All Rights Reserved. </p>
+          <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
+          <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="../files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
         </div>
     </section>
 
