Update blf link

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -93,7 +93,7 @@
     
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">Where & when?</h1>
-      <p class="subtext">The <b>three-day programme</b> will be hosted by us at <b>three</b> different institutions. You will need to travel to and from <b><a class="hyperlink" target="_blank" href="https://www.google.com/maps/dir/51.4624358,-0.0820318/imperial+college+london+blackett+laboratory/@51.4820658,-0.20036,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x4876055b81f19133:0xd04e1ad92205e646!2m2!1d-0.1793099!2d51.4996012">The Blackett Laboratory</a></b> (the Physics Department) at <b>Imperial College London</b> for each day of the programme. </p>
+      <p class="subtext">The <b>three-day programme</b> will be hosted by us at <b>three</b> different institutions. You will need to travel to and from <b><a class="hyperlink" target="_blank" href="https://www.google.com/maps/dir//imperial+college+london+blackett+laboratory/@51.4824248,-0.1652927,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x4876055b81f19133:0xd04e1ad92205e646!2m2!1d-0.1793099!2d51.4996012">The Blackett Laboratory</a></b> (the Physics Department) at <b>Imperial College London</b> for each day of the programme. </p>
       <p class="subtext"> Activities will take place at the following locations:</p>
       <div>
         <ul>
