--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -355,7 +355,7 @@
       <div class="collapse" id="faq-15">
         <p class="subtext grey-text">
         Teachers can download, print and share the Representing Physics 2023 <u><a class="hyperlink" target="_blank" href="../files/RP2023 Flyer.pdf"
-        >flyer</a></u> which contains key information and includes a QR code that will direct students to this webpage. We also invite teachers to encourage students to apply in assembilies and lessons, and share this opportunity within their networks. 
+        >flyer</a></u> which contains key information and includes a QR code that will direct students to this webpage. We also invite teachers to encourage students to apply in assemblies and lessons, and share this opportunity within their networks. 
         </p>
       </div>
 
