--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -278,7 +278,7 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-7" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I have SEN, a disability or a medical condition; can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I have SEN, a disability or a medical condition, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-7">
         <p class="subtext grey-text">
