Changes key date

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -205,7 +205,7 @@
               <p>Instagram Live Q&A</p>
               <!-- <p class="subtext">Tune in to our Instagram and we will answer your questions - live!</p> -->
           </li>
-          <li class="event" data-date="26th May 2023">
+          <li class="event update" data-date="9th June 2023">
               <p>Applications close</p>
           </li>
           <li class="event" data-date="9th June 2023">
