Disables application button and teacher ref deadline

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -188,7 +188,7 @@
           <li> Information about why you would like to attend Representing Physics 2023 (150-200 words)</li>
         </ul>
           <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/JjQK9kWi3bkjxhhr7">
-            <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
+            <button class="btn btn-lg btn-dark orange-btn" disabled type="submit" >Applications are now closed.</button>
           </form>
       </div>
     </div>
@@ -208,7 +208,7 @@
           <li class="event update" data-date="9th June 2023">
               <p>Applications close</p>
           </li>
-          <li class="event" data-date="9th June 2023">
+          <li class="event" data-date="1th June 2023">
               <p>Teacher references deadline</p>
           </li>
           <li class="event" data-date="23rd June 2023">
