Add year to event link

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -59,7 +59,7 @@
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Rising Stars</a>
+                        <a class="dropdown-item" href="#">Rising Stars 2022</a>
                         <a class="dropdown-item" href="../rp2023/index.html">Representing Physics 2023</a>
                       </div>
                     </li>
@@ -86,7 +86,7 @@
 
       <div class="shell form">
         <div class="header" >
-        <h1 class="heading">Rising Stars <hr></h1>
+        <h1 class="heading">Rising Stars 2022<hr></h1>
         </div>
 
 
