--- a/join/welcome.html
+++ b/join/welcome.html
@@ -67,7 +67,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars</a>
+                  <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars 2022</a>
                   <a class="dropdown-item" href="https://theblackettlabfamily.com/rp2023">Representing Physics 2023</a>
                 </div>
               </li>
