--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -86,7 +86,7 @@
 
     <div class="white-div d-flex flex-column justify-content-center" style="margin-bottom: 0; padding-bottom: 0">
       <h1 class="heading" style="margin-bottom: 0%;">RP2023: A Historic Achievement</h1>
-      <p > Jonathan Lansley-Gordon, 18th August 2023</p>
+      <p > Jonathan Lansley-Gordon, August 2023</p>
     </div>
     <div class="white-div d-flex flex-column" style="align-items: center;">
       <div class="img-div" style="width: 100%;">
