--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+(<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -90,7 +90,7 @@
     </div>
     <div class="white-div d-flex flex-column" style="align-items: center;">
       <div class="img-div" style="width: 100%;">
-        <img src="../images/rp2023/iop-group.png" class="img-responsive img-thumbnail" alt="...">
+        <img src="../images/rp2023/iop-group.jpg" class="img-responsive img-thumbnail" alt="...">
       </div>
       <p class="subtext">On Wednesday 2nd August, 2023, The Blackett Lab Family welcomed its <b>first ever</b> cohort of graduates from its flagship outreach programme, Representing Physics.</p>
       <p class="subtext">
@@ -107,17 +107,17 @@
 
         <div class="col-md-4  thumb">
             <a class="thumbnail">
-                <img class="img-responsive" src="../images/rp2023/day1-lecture.png" alt="">
+                <img class="img-responsive" src="../images/rp2023/day1-lecture.jpg" alt="">
             </a>
         </div>
         <div class="col-md-4 thumb">
             <a class="thumbnail" >
-                <img class="img-responsive" src="../images/rp2023/day1-lab.png" alt="">
+                <img class="img-responsive" src="../images/rp2023/day1-lab.jpg" alt="">
             </a>
         </div>
         <div class="col-md-4 thumb">
             <a class="thumbnail" >
-                <img class="img-responsive" src="../images/rp2023/day1-chalkboard.png" alt="">
+                <img class="img-responsive" src="../images/rp2023/day1-chalkboard.jpg" alt="">
             </a>
         </div>
       </div> 
@@ -139,17 +139,17 @@
   
     <div class="col-md-4 thumb">
         <a class="thumbnail">
-            <img class="img-responsive" src="../images/rp2023/day2-trip.png" alt="">
+            <img class="img-responsive" src="../images/rp2023/day2-trip.jpg" alt="">
         </a>
     </div>
     <div class="col-md-4 thumb">
         <a class="thumbnail" >
-            <img class="img-responsive" src="../images/rp2023/day2-measure.png" alt="">
+            <img class="img-responsive" src="../images/rp2023/day2-measure.jpg" alt="">
         </a>
     </div>
     <div class="col-md-4 thumb">
         <a class="thumbnail" >
-            <img class="img-responsive" src="../images/rp2023/day2-blf.png" alt="">
+            <img class="img-responsive" src="../images/rp2023/day2-blf.jpg" alt="">
         </a>
     </div>
   </div>
@@ -168,7 +168,7 @@
 
     <div class="col-md-5 thumb" >
         <a class="thumbnail">
-            <img class="img-responsive img-rocket" src="../images/rp2023/day2-rocket.png" alt="">
+            <img class="img-responsive img-rocket" src="../images/rp2023/day2-rocket.jpg" alt="">
         </a>
         <p class="subtext">Oh, and we also built and launched huge water-rockets, to develop students' collaborative problem-solving but really to have some fun!  </p> 
 
@@ -193,13 +193,13 @@
         <div class="row justify-content-md-center" style="margin-top: 5%;">
           <div class="col-md-4 thumb" >
             <a class="thumbnail">
-                <img class="img-responsive" src="../images/rp2023/day3-morning.png" alt="">
+                <img class="img-responsive" src="../images/rp2023/day3-morning.jpg" alt="">
             </a>
     
         </div> 
           <div class="col-md-8 thumb" >
               <a class="thumbnail">
-                  <img class="img-responsive" src="../images/rp2023/day3-group.png" alt="">
+                  <img class="img-responsive" src="../images/rp2023/day3-group.jpg" alt="">
               </a>
           </div> 
       
