Update team members

--- a/index.html
+++ b/index.html
@@ -145,17 +145,15 @@
                         </h1>
                     </div>
 
-
-                    <div class="flex-box team-div" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
-                        <img class="image" src="images/jon_profile.png" alt="Jon">
-                        <div>
-                            <h2 class="name"> Jonathan <br> Lansley-Gordon </h2>
-                            <p class="role"> Managing Director</p>
-                            <p class="job">Assistant Headteacher</p>
-
+                    <div class="flex-box team-div" style="margin-bottom: 0;" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
+                        <img class="image" src="images/mark_profile.png" alt="Mark">
+                        <div >
+                            <h2 class="name"> Mark Richards </h2>
+                            <p class="role">Director of External Relations</p>
+                            <p class="job">Senior Lecturer</p>
+    
                         </div>
                     </div>
-
 
                     <div class="flex-box team-div" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
                         <img class="image" src="images/sophie_profile.png" alt="Sophie">
@@ -189,11 +187,11 @@
                 </div>
 
                 <div class="flex-box team-div" style="margin-bottom: 0;" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
-                    <img class="image" src="images/mark_profile.png" alt="Mark">
+                    <img class="image" src="images/matthew_profile.png" alt="Matthew">
                     <div >
-                        <h2 class="name"> Mark Richards </h2>
-                        <p class="role">Director of External Relations</p>
-                        <p class="job">Senior Lecturer</p>
+                        <h2 class="name"> Matthew Okenyi</h2>
+                        <p class="role">Treasurer</p>
+                        <p class="job">Software Engineer</p>
 
                     </div>
                 </div>
@@ -211,19 +209,18 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/jon_profile.png" alt="Jon" style="height:180px; margin-top: 1rem;" >
-                            <p class="job" style="top: 40%;">Assistant Headteacher</p>
+                            <img class="image" src="images/mark_profile.png" alt="Mark" >
+                            <p class="job"> Senior Lecturer </p>
                         </div>
                         <div >
-                            <h2 class="name"> Jonathan <br> Lansley-Gordon</h2>
-                            <p class="role"> Managing Director</p>
+                            <h2 class="name"> Mark Richards </h2>
+                            <p class="role"> Director of External Relations</p>
                         </div>
                     </div>
                 </div>
-
 
                 <div class="col-md-4">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
@@ -268,20 +265,19 @@
                         </div>
                     </div>
                 </div>
-
+             
                 <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/mark_profile.png" alt="Mark" >
-                            <p class="job"> Senior Lecturer </p>
+                            <img class="image" src="images/matthew_profile.png" alt="Matthew" >
+                            <p class="job"> Software Engineer </p>
                         </div>
                         <div >
-                            <h2 class="name"> Mark Richards </h2>
-                            <p class="role"> Director of External Relations</p>
+                            <h2 class="name"> Matthew Okenyi </h2>
+                            <p class="role"> Treasurer </p>
                         </div>
                     </div>
                 </div>
-
 
             </div>
         </div>
