Updating Benyam job

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="flex-box team-div" style="margin-bottom: 0;" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
                         <img class="image" src="images/mark_profile.png" alt="Mark">
                         <div >
-                            <h2 class="name"> Mark Richards </h2>
+                            <h2 class="name">Mark Richards </h2>
                             <p class="role">Director of External Relations</p>
                             <p class="job">Senior Lecturer</p>
     
@@ -170,7 +170,7 @@
                         <div >
                             <h2 class="name"> Benyam Dejen </h2>
                             <p class="role"> Director of Outreach</p>
-                            <p class="job">Undergraduate Student</p>
+                            <p class="job">Research Scientist</p>
 
                         </div>
                 </div>
@@ -243,7 +243,7 @@
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
                             <img class="image" src="images/benyam_profile.png" alt="Benyam" >
-                            <p class="job">Undergraduate Student</p>
+                            <p class="job">Research Scientist</p>
                         </div>
                             <div>
                             <h2 class="name"> Benyam Dejen </h2>
