adding link to speaker request form

--- a/index.html
+++ b/index.html
@@ -618,6 +618,14 @@
 
                         </div>
                     </div>
+                    <div class="inner">
+                        <p>If you would like a speaker for an event, you can make a request using this form:
+                        </p>
+                    <p class="subtext" style="word-wrap: break-word;">This will provide us with the details we need and we will get back to you.
+                        </p>
+                        <div class="white-border-round"><a href="https://forms.gle/a13wk1Nxck9Zip4Y7" target="_blank"><i
+                                    class="far fa-2x fa-question"></i></a></div>
+                    </div>
 
                     <div class="inner">
                         <p>For general enquires, partnerships, or collaborations, please email us at:
@@ -645,21 +653,26 @@
             <div class="cta-div web-only text-center">
                 <h1 class="heading">Get in touch </h1>
 
-                <div class="row">
-                    <div class="inner col-md-6  add-seperator">
+                <div class="row" style="padding-bottom: 0;">
+                    <div class="inner col-md-4  add-seperator">
                         <p>Are you based in the UK, of Black heritage and have studied physics at A&shy; Level/equivalent or
                             above, or have experience in a physics related field?
                         </p>
                     </div>
-                    <div class="inner col-md-6">
-                        <p>For general enquires, partnerships, or collaborations, please email us at:
+                    <div class="inner col-md-4 add-seperator">
+                        <p>If you would like a speaker for an event, you can make a request using this form:
                         </p>
                     </div>
+                    <div class="inner col-md-4">
+                        <p>For general enquires, partnerships, or other collaborations, please email us at:
+                        </p>
+                    </div>
+
                 </div>
 
 
-                <div class="popup-button row">
-                    <div class="inner col-md-6 ">
+                <div class="popup-button row" style="padding-bottom: 0;">
+                    <div class="inner col-md-4 ">
                        <p class="subtext">Click <a class="clickhere" onclick="togglePopup()">here</a> to read more about our community and use the button below to join.
                         <span class="popup-text" id="popup-web">
 
@@ -668,18 +681,26 @@
 
                              </span>
                             </p> </div>
-                    <div class="inner col-md-6">
+                            <div class="inner col-md-4 ">      
+                            <p class="subtext">This will provide us with the details we need and we will get back to you.</p>
+                            </div>      
+                    <div class="inner col-md-4">
                         <p class="subtext" style="word-wrap: break-word;">connect@theblackettlab&shy;family.com</p>
 
                 </div></div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                     <a href="https://join.theblackettlabfamily.com">
-                    <div class="white-border-round"><i
-                        class="fas fa-2x fa-user-plus"></i></a>
-                    </div> </div>
-
-                    <div class="col-md-6">
+                        <div class="white-border-round"><i
+                            class="fas fa-2x fa-user-plus"></i></a>
+                        </div> 
+                    </div>
+                    <div class="col-md-4">
+                        <div class="white-border-round"><a href="https://forms.gle/a13wk1Nxck9Zip4Y7" target="_blank"><i
+                            class="far fa-2x fa-question"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="white-border-round"><a href="mailto:connect@theblackettlabfamily.com"><i
                             class="far fa-2x fa-envelope"></i></a></div>
                     </div>
