--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles_11.css">
+    <link rel="stylesheet" href="css/styles_12.css">
 
     <!-- Google Fonts -->
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -57,8 +57,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="rising-stars/index.html">Rising Stars 2022</a>
-                    <a class="dropdown-item" href="rp2023/index.html">Representing Physics 2023</a>
+                    <a class="dropdown-item" href="events/rp2024/index.html">Representing Physics 2024</a>
+                    <a class="dropdown-item" href="events/past-events.html">Past Events</a>
                     </div>
                 </li>
                 <li class="nav-item">
