update navbar and css

--- a/join/redirect.html
+++ b/join/redirect.html
@@ -22,7 +22,7 @@
      ####################################################################### -->
 
     <link rel="stylesheet" href="https://theblackettlabfamily.com/third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="parent/css/styles_11.css">
+    <link rel="stylesheet" href="parent/css/styles_12.css">
 
     <!-- Google Fonts -->
     <link href="https://theblackettlabfamily.com/third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -67,8 +67,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars 2022</a>
-                  <a class="dropdown-item" href="https://theblackettlabfamily.com/rp2023">Representing Physics 2023</a>
+                  <a class="dropdown-item" href="https://theblackettlabfamily.com/events/rp2024">Representing Physics 2024</a>
+                  <a class="dropdown-item" href="https://theblackettlabfamily.com/events/past-events">Past Events</a>
                 </div>
               </li>
               <li class="nav-item">
