--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -267,137 +267,106 @@
       </a>
       <div class="collapse" id="faq-2">
         <p class="subtext grey-text">
-          Our <u><a class="hyperlink" href="../parent/index.html#meet-the-team">company directors</a></u> Jonathan Lansley-Gordon (Education Consultant and former Assistant Headteacher), Benyam Dejen (Researcher at the National Physical Laboratory) and Sophie Martin (Doctoral Researcher) will be supervising students on the three-day programme and will be in charge of overseeing activities.
+        The programme will be lead by one of our <u><a class="hyperlink" href="../parent/index.html#meet-the-team">company directors</a></u>, Benyam Dejen and a dedicated team of trained, DBS-checked members who will supervise the students and oversee activities. 
         </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-3" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How much will it cost to participate in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">How much will it cost to attend the RP2024 programmes? <i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-3">
         <p class="subtext grey-text">
-        The programme is totally free to attend. We will cover all costs, including food and travel to and from the programme.
-        </p>
+        RP2024 is designed to be totally-free to attend. For attendees of RP2024 London, we will cover the costs of food and travel to and from the programme.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-4" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">Is this a residential programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I have SEN, a disability or a medical condition, can I take part?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-4">
         <p class="subtext grey-text">
-        Representing Physics 2023 is a non-residential programme. This means that you will be responsible for travelling to and from the programme – for registration at The Blackett Laboratory – on each day.
-        </p>
+          We welcome students of Black heritage of all abilities, including those with additional needs, to apply to the programme. During registration, you will be able to tell us more about your needs so we can make the programme as safe and inclusive as possible.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-5" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How do I get to The Blackett Laboratory at Imperial College London? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I am not of Black-heritage, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-5">
         <p class="subtext grey-text">
-        The Blackett Laboratory is the Physics Department at Imperial College London, South Kensington Campus, SW7 2AZ. The nearest tube station is South Kensington, on the District and Circle Lines.
-        </p>
+        The Representing Physics programmes are designed to encourage students of Black heritage - currently significantly underrepresented in the field – to consider pursuing a physics or physics-related course. If you are not of Black heritage, we encourage you to consider alternative summer schools and programmes if you are interested in physics.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-6" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How will I be travelling to different locations during the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I do not live in London, can I apply for RP2024 Online & London?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-6">
         <p class="subtext grey-text">
-        Registration will be at The Blackett Laboratory for each morning of the programme. Group travel during the day will be organised and supervised by us; either by TfL, or by coach. You will need an Oyster card or equivalent - and we will cover the cost of your travel.
+        This is a non-residential programme, therefore your primary residence must be in London to be considered for RP2024 Online & London. If you do not live in London but still meet the other eligiblility requirements, we encourage you to apply to RP2024 Online.
         </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-7" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I have SEN, a disability or a medical condition, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">
+        I am not in Year 11, Year 12 or equivalent, should I still apply? <i class="fas fa-chevron-down" style="color: white;"></i>
+        </p>
       </a>
       <div class="collapse" id="faq-7">
         <p class="subtext grey-text">
-        We welcome students of Black heritage of all abilities, including those with additional needs, to apply to the programme. During registration, you will be able to tell us more about your needs so we can make the programme as safe and inclusive as possible.
-        </p>
+        RP2024 is designed for students who are currently (at the time of applying) in Year 11, Year 12 or equivalent. If you are not in either year group at the time of applying, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
+      </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-8" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I am not of Black heritage, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I'm from London, and I can only attend part of RP2024 Online & London, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-8">
         <p class="subtext grey-text">
-        Representing Physics 2023 is a programme designed to encourage students of Black heritage - currently significantly underrepresented in the field – to consider pursuing a physics or physics-related course. If you are not of Black heritage, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
+          RP2024 Online and RP2024 London are complementary programmes offering a range of experiences and opportunities to students of Black heritage interested in physics. We ask that you commit to attend all days of both programmes, otherwise consider applying to RP2024 Online only.
         </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I am not based in London, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">What if my application is successful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-9">
         <p class="subtext grey-text">
-        Representing Physics 2023 is a London based, non-residential programme; therefore, we welcome students based in London who are able to travel to and from the programme across three-days.
-        </p>
+          You will receive confirmation by email about the outcome of your application and you'll recieve information about the registration process.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-10" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I am not in Year 11 or Year 12, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">What if my application is sucessful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-10">
         <p class="subtext grey-text">
-        Representing Physics 2023 is a programme for London based students who are currently (at the time of applying) in Year 11 or Year 12.  If you are not in either year group at the time of applying, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
-        </p>
+        You will receive confirmation by email about the outcome of your application. If unsuccessful, you will still have the opportunity to opt in to our mailing list with helpful resources and info about future events hosted by The Blackett Lab Family.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I can only attend part of the programme – can I still apply? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">Can I join The Blackett Lab Family?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-11">
         <p class="subtext grey-text">
-        Representing Physics 2023 is a three-day programme offering a range of experiences and opportunities to students of Black heritage interested in physics. We encourage you to apply if you are able to commit to all three days of the programme.
-        </p>
+        Our members have completed a post-16 qualification in physics or a physics related course. We encourage you to continue with physics so that you can join the crew too!        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">What happens if my application is successful? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">How can I share this opportunity?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-12">
         <p class="subtext grey-text">
-        You will receive confirmation by email about the outcome of your application. If successful, you and your parent / carer / legal guardian will be invited to register for Representing Physics 2023.
+        TBD
         </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-13" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">What happens if my application is unsuccessful? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">How can I contact The Blackett Lab Family about this programme?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-13">
         <p class="subtext grey-text">
-        You will receive confirmation by email about the outcome of your application. If unsuccessful, you will still have the opportunity to opt in to our mailing list with helpful resources and info about future events hosted by The Blackett Lab Family.
+        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at outreach@theblackettlabfamily.com.
         </p>
       </div>
 
-      <a class="btn button" data-toggle="collapse" href="#faq-14" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">Can I join The Blackett Lab Family? <i class="fas fa-chevron-down" style="color: white;"></i></p>
-      </a>
-      <div class="collapse" id="faq-14">
-        <p class="subtext grey-text">
-        Our members have completed a post-16 qualification in physics or a physics related course. We encourage you to continue with physics so that you can join the crew too!
-        </p>
-      </div>
-
-      <a class="btn button" data-toggle="collapse" href="#faq-15" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I'm a teacher – how can I share this opportunity with my students? <i class="fas fa-chevron-down" style="color: white;"></i></p>
-      </a>
-      <div class="collapse" id="faq-15">
-        <p class="subtext grey-text">
-        Teachers can download, print and share the Representing Physics 2023 <u><a class="hyperlink" target="_blank" href="../parent/files/RP2023 Flyer.pdf"
-        >flyer</a></u> which contains key information and includes a QR code that will direct students to this webpage. We also invite teachers to encourage students to apply in assemblies and lessons, and share this opportunity within their networks.
-        </p>
-      </div>
-    
-      <a class="btn button" data-toggle="collapse" href="#faq-16" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How can I contact The Blackett Lab Family? <i class="fas fa-chevron-down" style="color: white;"></i></p>
-      </a>
-      <div class="collapse" id="faq-16">
-        <p class="subtext grey-text">
-        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:connect@theblackettlabfamily.com?subject=Representing%20Physics%202023"
-        >connect@theblackettlabfamily.com.</a></u>
-        </p>
-      </div>
+      
     </div>
 
     <div id="sponsors" class="white-div d-flex flex-column text-center">
