add hyperlink to email

--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -362,7 +362,7 @@
       </a>
       <div class="collapse" id="faq-13">
         <p class="subtext grey-text">
-        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at outreach@theblackettlabfamily.com.
+        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:outreach@theblackettlabfamily.com">outreach@theblackettlabfamily.com</a></u>.
         </p>
       </div>
 
