--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -81,7 +81,7 @@
 
   <section class="rp-page">
     <div class="header">
-        <img src="../parent/images/payton-tuttle-n_RdRxH_7h4-unsplash.jpg" class="img-fluid" alt="...">
+        <img src="../parent/images/rp2023-bw.png" class="img-fluid" alt="...">
         <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2024<hr> </h1>
     </div>
 
@@ -212,7 +212,7 @@
         </div>
 
         <div class="col-6 text-center">
-          If you live in <b>London</b> use this link to apply to <b>RP2024 Online and RP2023 London</b>:
+          If you live in <b>London</b> use this link to apply to <b>RP2024 Online and London</b>:
           <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/JjQK9kWi3bkjxhhr7">
             <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
           </form>
