Update image and faqs

--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -80,14 +80,14 @@
   </section>
 
   <section class="rp-page">
-    <div class="header">
-        <img src="../parent/images/rp2023-bw.png" class="img-fluid" alt="...">
-        <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2024<hr> </h1>
-    </div>
+      <div class="header">
+          <img src="../parent/images/rp2023-bw.png" class="img-fluid" alt="...">
+          <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2024<hr> </h1>
+      </div>
 
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">Welcome! 
-        <p class=" text-sm-center" style="font-family: Titillium Web;">... so nice we had to do it <b>twice!</b></p>
+        <p class="text-sm-center" style="font-family: Titillium Web;">... so nice we had to do it <b>twice!</b></p>
       </h1>
 
       <p class="subtext">We are proud and excited to be launching the comeback of our physics summer experience for <b>Year 11 and Year 12 students of Black heritage!</b>
@@ -99,6 +99,7 @@
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">What, where & when?</h1>
 
+      <h2 class="text-sm-center"><b>RP2024 Online</b></h2>
       <p class="subtext"> <b>RP2024 Online</b> will be hosted by us on the video platform Zoom and will be taking place on <b>Monday 12 August 2024</b>. That means you will only need a <b>mobile phone</b>, <b>tablet</b> or <b>computer</b> with internet access to take part and so this programme is open to applicants across the UK. Some of the exciting activities you can look forward to are:</p>
       <div class="white-div d-flex flex-column text-sm-center">
         <div class="flex-row">
@@ -117,6 +118,8 @@
             Chat away and hear about the wonderful experiences Black physicists who are active researchers in the field as well as those who have branched out into other fields such as <b>finance</b>, <b>law</b> and <b>music</b>.
         </div>
       </div>
+
+      <h2 class="text-sm-center"><b>RP2024 London</b></h2>
 
       <p class="subtext"><b>RP2024 London</b> is a three-day, in-person programme hosted by us across three London-based institutions: The Blackett Laboratory, National Physical Laboratory and Institute of Physics from Monday 19 August 2024 - Wednesday 21 August 2024. 
       This is a non-residential programme, which means that you will need to be able to arrange your own travel between your home, or hotel, and the main site The Blackett Laboratory (Physics department) at Imperial College London on each day. </p>
@@ -154,8 +157,8 @@
       </p>
     </div>
 
-    <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">What will I get?</h1>
+    <div class="white-div d-flex flex-column">
+      <h1 class="heading text-sm-center">What will I get?</h1>
       <div class="container">
         <div class="row">
           <!-- <div class="col-4">
@@ -189,7 +192,7 @@
 
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">How do I apply?</h1>
-      <div>
+      <div class="text-sm-center">
         <p class="subtext"> Click on the link below to apply for our programme.</p>
         <p class="subtext"> Our application forms will ask you for:</p>
 
@@ -212,7 +215,7 @@
       <h1 class="heading">Key dates</h1>
       <div id="content">
         <ul class="timeline">
-          <li class="event" data-date="22nd March 2024">
+          <li class="event" data-date="27th March 2024">
               <p>Student applications open</p>
               <!-- <p class="subtext">Lorem ipsum. Lorem ipsum.</p> -->
           </li>
@@ -229,21 +232,24 @@
           <li class="event" data-date="12th August 2024">
             <p>RP2024 Online</p>
           </li>
-          <li class="event" data-date="19-21st August 2024">
-            <p>RP2024 London</p>
+          <li class="event" data-date="19th August 2024">
+            <p>RP2024 London begins!</p>
+          </li>
+          <li class="event" data-date="21st August 2024">
+            <p>RP2024 London ends </p>
           </li>
         </ul>
       </div>
     </div>
 
-    <div style="padding-top: 0rem;" class="white-div d-flex text-sm-center">
+    <!-- <div style="padding-top: 0rem;" class="white-div d-flex text-sm-center">
       <div  style="width: 60%;" class="container">
         <p>If you are interested in finding out about opportunities in the future, please sign up to our mailing list using the short survey below: </p>
       <form style="padding-top:1rem" class="text-center" target="_blank" action="https://join.theblackettlabfamily.com">
         <button class="btn btn-lg btn-dark orange-btn" type="submit">Sign me up to the mailing list!</button>
       </form>
     </div>
-    </div>
+    </div> -->
 
     <div id=faqs class="d-flex flex-column text-sm-center" >
       <h1 class="heading"> FAQs </h1>
@@ -310,45 +316,45 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-8" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I'm from London, and I can only attend part of RP2024 Online & London, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">Can I apply if I took part in last year's RP2023 programme?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-8">
+        <p class="subtext grey-text">
+        Due to the limited number of places, we're unable to accept applications from last year's cohort. However, we'll be in touch with ways you can engage with this year's cohort soon!
+        </p>
+      </div>
+
+      <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I'm from London, and I can only attend part of RP2024 Online & London, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
+      <div class="collapse" id="faq-9">
         <p class="subtext grey-text">
           RP2024 Online and RP2024 London are complementary programmes offering a range of experiences and opportunities to students of Black heritage interested in physics. We ask that you commit to attend all days of both programmes, otherwise consider applying to RP2024 Online only.
         </p>
       </div>
 
-      <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
+      <a class="btn button" data-toggle="collapse" href="#faq-10" role="button" aria-expanded="false" aria-controls="collapseExample">
         <p class="subtext">What if my application is successful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
-      <div class="collapse" id="faq-9">
+      <div class="collapse" id="faq-10">
         <p class="subtext grey-text">
           You will receive confirmation by email about the outcome of your application and you'll recieve information about the registration process.        </p>
       </div>
 
-      <a class="btn button" data-toggle="collapse" href="#faq-10" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">What if my application is sucessful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+      <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">What if my application is successful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
-      <div class="collapse" id="faq-10">
+      <div class="collapse" id="faq-11">
         <p class="subtext grey-text">
         You will receive confirmation by email about the outcome of your application. If unsuccessful, you will still have the opportunity to opt in to our mailing list with helpful resources and info about future events hosted by The Blackett Lab Family.        </p>
       </div>
 
-      <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">Can I join The Blackett Lab Family?<i class="fas fa-chevron-down" style="color: white;"></i></p>
-      </a>
-      <div class="collapse" id="faq-11">
-        <p class="subtext grey-text">
-        Our members have completed a post-16 qualification in physics or a physics related course. We encourage you to continue with physics so that you can join the crew too!        </p>
-      </div>
-
       <a class="btn button" data-toggle="collapse" href="#faq-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How can I share this opportunity?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">Can I join The Blackett Lab Family?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-12">
         <p class="subtext grey-text">
-        TBD
-        </p>
+        Our members have completed a post-16 qualification in physics or a physics related course. We encourage you to continue with physics so that you can join the crew too!        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-13" role="button" aria-expanded="false" aria-controls="collapseExample">
