remove img-fluid class

--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -81,7 +81,7 @@
 
   <section class="rp-page">
       <div class="header">
-          <img src="../parent/images/rp2023-bw.png" class="img-fluid" alt="...">
+          <img src="../parent/images/rp2023-bw.png" alt="...">
           <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2024<hr> </h1>
       </div>
 
