--- a/events/rp2023/index.html
+++ b/events/rp2023/index.html
@@ -80,7 +80,7 @@
 
   <section class="rp-page">
     <div class="header">
-        <img src="../parent/images/noah-buscher-iQRgCw9v6YE-unsplash.jpg" class="img-fluid" alt="...">
+        <img src="../parent/images/noah-buscher-iQRgCw9v6YE-unsplash.jpg" alt="...">
         <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2023<hr> </h1>
     </div>
 
