--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -121,13 +121,13 @@
 
       <h2 class="text-sm-center"><b>RP2024 London</b></h2>
 
-      <p class="subtext"><b>RP2024 London</b> is a three-day, in-person programme hosted by us across three London-based institutions: The Blackett Laboratory, National Physical Laboratory and Institute of Physics from Monday 19 August 2024 - Wednesday 21 August 2024. 
+      <p class="subtext"><b>RP2024 London</b> is a three-day, in-person programme hosted by us across three London-based institutions: The Blackett Laboratory, National Physical Laboratory and Institute of Physics from <b>Monday 19 August 2024 - Wednesday 21 August 2024.</b> 
       This is a non-residential programme, which means that you will need to be able to arrange your own travel between your home, or hotel, and the main site The Blackett Laboratory (Physics department) at Imperial College London on each day. </p>
 
       <div class="white-div d-flex flex-column text-sm-center">
           <div class="flex-row">
             <p class="orange-text">+ Taster of the undergraduate experience</p>
-            <p class="subtext">That's right! You'll get a feel for what it's like to be a physics undergraduate at university: <b>lectures</b>, <b>experiments in labs</b> and <b>everything in-between</b>.               .
+            <p class="subtext">That's right! You'll get a feel for what it's like to be a physics undergraduate at university: <b>lectures</b>, <b>experiments in labs</b> and <b>everything in-between</b>.
           </div>
   
           <div class="flex-row">
