--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -342,7 +342,7 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">What if my application is successful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">What if my application is unsuccessful?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-11">
         <p class="subtext grey-text">
