Disabling application button

--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -204,9 +204,15 @@
           <li>Which programme you would like to apply for (<b>you can apply for either or both!</b>)</li>
         </ul>
          
-        <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/d6mwQynmZ15U6tQ47">
+        <!-- <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/d6mwQynmZ15U6tQ47">
           <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
+        </form> -->
+
+
+        <form style="padding-top:1rem" class="text-sm-center">
+          <button class="btn btn-lg btn-dark" type="submit" disabled>Applications have now closed.</button>
         </form>
+        We will be in touch soon with updates.
 
       </div>
     </div>
@@ -216,10 +222,10 @@
       <div id="content">
         <ul class="timeline">
           <li class="event" data-date="27th March 2024">
-              <p>Student applications open</p>
+              <p><s>Student applications open</s></p>
           </li>
           <li class="event" data-date="17th June 2024">
-              <p>Student applications close</p>
+              <p><s>Student applications close</s></p>
           </li>
           <li class="event update" data-date="21st June 2024">
               <p>Teacher reference deadline</p>
