--- a/events/rp2024/index.html
+++ b/events/rp2024/index.html
@@ -228,9 +228,9 @@
               <p><s>Student applications close</s></p>
           </li>
           <li class="event update" data-date="21st June 2024">
-              <p>Teacher reference deadline</p>
+              <p><s>Teacher reference deadline</s></p>
           </li>
-          <li class="event" data-date="28th June 2024">
+          <li class="event" data-date="15th July 2024">
               <p>Decisions announced & registration opens</p>
           </li>
           <li class="event" data-date="12th August 2024">
