Adds amplify 2024 page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="events/rp2024/index.html">Representing Physics 2024</a>
+                    <a class="dropdown-item" href="events/amplify/index.html">Amplify 2024</a>
                     <a class="dropdown-item" href="events/past-events.html">Past Events</a>
                     </div>
                 </li>
@@ -714,7 +715,7 @@
           <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
           <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
-          <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="../files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
+          <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
         </div>
     </section>
 
