--- a/events/rising-stars/index.html
+++ b/events/rising-stars/index.html
@@ -56,6 +56,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="../parent/events/rp2024/index.html">Representing Physics 2024</a>
+                        <a class="dropdown-item" href="../amplify/index.html">Amplify 2024</a>
                         <a class="dropdown-item" href="../past-events.html">Past Events</a>
                       </div>
                     </li>
