--- a/events/rp2023/index.html
+++ b/events/rp2023/index.html
@@ -58,6 +58,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="../rp2024/index.html">Representing Physics 2024<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="../amplify/index.html">Amplify 2024</a>
               <a class="dropdown-item" href="../past-events.html">Past Events</a>
             </div>
           </li>
