--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -57,7 +57,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="events/rp2024/index.html">Representing Physics 2024</a>
+              <a class="dropdown-item" href="../rp2024/index.html">Representing Physics 2024</a>
               <a class="dropdown-item" href="#">Amplify 2024<span class="sr-only">(current)</span></a>
               <a class="dropdown-item" href="../past-events.html">Past Events</a>
 
